add styling for News and Events

--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8888/langara_web/"
+  "proxy": "https://www.langara-app.ca/"
 }
