--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-cookie-consent": "^6.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
